src/main/resources/public/styles/styles.css
.background {
    /*background-image: url('http://c2gmusichall.com/wp-content/uploads/2014/08/backgrounds-that-work-well-with-shadygamer-shadygamer.jpg');*/
    background-color: white;
    background-color: #28a4c9
    background-size: cover;
    width: 100%;
}

.feed-container {
    position: relative;
    padding-bottom: 56.25%;
    padding-top: 35px;
    height: 0;
    overflow: hidden;
}

.feed-container iframe {
    position: absolute;
    top:0;
    left: 0;
    width: 100%;
    height: 100%;
}

html,
body {
    width: 100%;
    height: 100%;
}

#login,
#summonerSearch {
    color: black;
}

#summonerSearch{
    width: 200px;
}

body {
    font-family: "Source Sans Pro", "Helvetica Neue", Helvetica, Arial, sans-serif;
    color: black;
}

/*sets image box for ng-repeat*/
.stuff,#league{
    width:155px;
    float:left;
    /*display: inline;*/
}

.text-vertical-center {
    display: table-cell;
    text-align: center;
    vertical-align: middle;
    height: 400px;
    color: black;
}

.text-vertical-center h3 {
    color: white;
}

.text-vertical-center h1 {
    margin: 0;
    padding: 0;
    font-size: 4.5em;
    font-weight: 700;
    color: #28a4c9;
}


/* Custom Button Styles */

.btn-dark {
    border-radius: 0;
    color: #fff;
    background-color: #31708f;
    'rgba(0,0,0,0.4);

}

.btn-dark:hover,
.btn-dark:focus,
.btn-dark:active {
    color: #fff;
    background-color: lightslategrey;
    'rgba(0,0,0,0.7);

}

.btn-light {
    border-radius: 0;
    color: #333;
    background-color: #31708f;
    ;
    'rgb(255,255,255);

}

.btn-light:hover,
.btn-light:focus,
.btn-light:active {
    color: #333;
    background-color: lightslategrey;
    'rgba(255,255,255,0.8);

}


/* Custom Horizontal Rule */

hr.small {
    max-width: 100px;
}


/* Side Menu */

#sidebar-wrapper {
    z-index: 1000;
    position: fixed;
    right: 0;
    width: 250px;
    height: 100%;
    margin-right: -250px;
    overflow-y: auto;
    background: #222;
    -webkit-transition: all 0.4s ease 0s;
    -moz-transition: all 0.4s ease 0s;
    -ms-transition: all 0.4s ease 0s;
    -o-transition: all 0.4s ease 0s;
    transition: all 0.4s ease 0s;
}

.sidebar-nav {
    position: absolute;
    top: 0;
    width: 250px;
    margin: 0;
    padding: 0;
    list-style: none;
}

.sidebar-nav li {
    text-indent: 20px;
    line-height: 40px;
}

.sidebar-nav li a {
    display: block;
    text-decoration: none;
    color: #fff;
    '#999;

}

.sidebar-nav li a:hover {
    text-decoration: none;
    color: #fff;
    background: rgba(255, 255, 255, 0.2);
}

.sidebar-nav li a:active,
.sidebar-nav li a:focus {
    text-decoration: none;
}

.sidebar-nav > .sidebar-brand {
    height: 55px;
    font-size: 18px;
    line-height: 55px;
}

.sidebar-nav > .sidebar-brand a {
    color: #999;
}

.sidebar-nav > .sidebar-brand a:hover {
    color: #fff;
    background: none;
}

#menu-toggle {
    z-index: 1;
    position: fixed;
    top: 0;
    right: 0;
}

#login {
    z-index: 1;
    position: fixed;
    top: 0;
    left: 0;
    margin: 5px 5px 5px 5px;
}

#sidebar-wrapper.active {
    right: 250px;
    width: 250px;
    -webkit-transition: all 0.4s ease 0s;
    -moz-transition: all 0.4s ease 0s;
    -ms-transition: all 0.4s ease 0s;
    -o-transition: all 0.4s ease 0s;
    transition: all 0.4s ease 0s;
}

.toggle {
    margin: 5px 5px 0 0;
}


/* Header */

.header {
    display: table;
    position: relative;
    width: 100%;
    height: 100%;
    background: url(../images/space-bg.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}


/* About */

.news {
    padding: 50px 0;
    font-size: 20pt;
    color: #3366FF;
}

.about {
    padding: 50px 0;
    color: #3366FF;
}


/* Services */

.services {
    padding: 50px 0;
    color: #3366FF;
}

.service-item {
    margin-bottom: 30px;
}


/* Callout */

.callout {
    display: table;
    width: 100%;
    height: 400px;
    color: #31708f;
    background: url(../images/community-bg.jpg) no-repeat center center scroll;
    -webkit-background-size: cover;
    -moz-background-size: cover;
    background-size: cover;
    -o-background-size: cover;
}


/* Portfolio */

.portfolio {
    padding: 50px 0;
    color: #3366FF;
}

.portfolio-item {
    margin-bottom: 30px;
}

.img-portfolio {
    margin: 0 auto;
}

.img-portfolio:hover {
    opacity: 0.8;
}


/* Call to Action */

.call-to-action {
    padding: 50px 0;
}

.call-to-action .btn {
    margin: 10px;
}


/* Map */

.map {
    height: 500px;
}

@media(max-width:768px) {
    .map {
        height: 75%;
    }
}


/* Footer */

footer {
    padding: 100px 0;
}

.button {
    border-style: solid;
    color: black;
    border-width: 1px 1px 1px 1px;
    text-decoration: none;
    padding: 4px;
    border-color: #000000
}


/* profile css */

#userProfile {
    color: black;
}

#userProfile h1 {
    color: white;
}

#profilePicSize,
#friendPicSize {
    height: 250px;
}

#logoff {
    margin-left: 10px;
}

.nav-justified {
    background: #ffffff;
}

.addMargin {
    margin-bottom: 10px;
}

.add-topMargin {
    margin-top: 15px;
}

.addLargeMargin {
    margin-bottom: 250px;
}

.profile-pic {
    display: block;
}
.add-all-margin{
 margin: 10px 10px 10px 10px;
}

.edit {
    padding-top: 7px;
    margin-right: 18px;
    position: absolute;
    right: 0;
    bottom: 0;
}

.gear {
     width: 500px;
    display: inline-block;
    color: white;
    background: #222;
    margin-top: 30px;
 border-radius: 20px;
    vertical-align: top;
}
.gear-wrapper{
    
 color: #fff;
    background-color: #337ab7;
    
    margin-top: 30px;
    padding: 5px 10px 01px 10px;
     
}

.champion{
    /*display:inline-block;*/
    color: white;
    background: #222;

}
.pvp {
    display:inline-block;
         width: 500px;
    color: white;
    background: #222;
    margin-top: 30px;
 border-radius: 20px;
    vertical-align: top;
    
}
.thumbnail{
    height: 84px;
     width: 84px;
}
.black-text{
 color: black;   
}
.underline{
 text-decoration: underline;   
}
.padding{
 padding: 5px 5px 5px 5px;   
}
.margin{
 margin: 5px 5px 5px 5px;   
}
.inline{
 display:inline-block;
}
.block{
 display:block;   
}
.center-this-text{
    text-align: center
}
.img-resize{
 margin-left: 59%;   
}
.tooltip {
  display: inherit;
  position: absolute;
  background-color: #222;
  padding: 7px 10px;
  max-width: 250px;
  color: #fff;
}
.smallIcon{
 height: 20px;
  width: 20px;
}

